--- a/pom.xml
+++ b/pom.xml
@@ -46,14 +46,19 @@
 	 <dependency>
 	  <groupId>mysql</groupId>
 	  <artifactId>mysql-connector-java</artifactId>
-	  <version>8.0.32</version>
-	  <type>pom</type>
+	  <version>8.0.25</version>
+	
 	 </dependency>
 	 <dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-starter-data-jpa</artifactId>
          </dependency>
-         
+	 <dependency>
+	  <groupId>org.springframework</groupId>
+	  <artifactId>spring-context</artifactId>
+	  <version>6.0.4</version>
+	  <type>jar</type>
+	 </dependency>
 	</dependencies>
 
 	<build>
